# GCRecompiler

./: .gitignore  CMakeLists.txt  README.md  analysis_log.txt
include/: recomp_runtime.h
include/gcrecomp/: common.h  log.h  types.h
include/gcrecomp/analysis/: analyzer.h  cfg.h  disasm.h  instruction.h  ir.h  lifter.h
include/gcrecomp/codegen/: emitter.h
include/gcrecomp/loader/: binary.h  dol.h
src/: main.cpp
src/analysis/: analyzer.cpp  cfg.cpp  disasm.cpp  lifter.cpp  optimizer.cpp
src/codegen/: emitter.cpp
src/loader/: dol.cpp
tests/: test_main.cpp
tools/: README.txt  extract_iso.bat
